# ha-ideenergy

./: .gitignore  .pre-commit-config.yaml  FAQ.md  Pipfile  README.es.md  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  hacs.yml
config/: configuration.yaml  custom_components
config/custom_components/ideenergy/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/ideenergy/: __init__.py  barrier.py  config_flow.py  const.py  datacoordinator.py  entity.py  fixes.py  hack.py  historical_sensor.py  historical_state.py  manifest.json  sensor.py  strings.json  updates.py
custom_components/ideenergy/translations/: en.json
